hard-gists/925008/run.log
=== Docker Run Log for 925008 ===
Started at: Mi 29. Okt 18:22:08 CET 2025

[2025-10-29 18:22:09] START: Running container for 925008
[2025-10-29 18:22:09] SUCCESS: Container 3d1361d9c31fea201ded1bfd9280403e5eb735e7d146d4a236a14ac5f9e4c198 started for 925008
=== Container logs for 925008 ===
  File "/snippet.py", line 29
    print "Switched syntax to: " + syntax
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 925008 ===
[2025-10-29 18:22:11] INFO: Container 3d1361d9c31fea201ded1bfd9280403e5eb735e7d146d4a236a14ac5f9e4c198 has stopped
